# logseer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install.cmake.in  logseer.desktop  make_appimage.sh  version.h.in
gui/: CMakeLists.txt  Config.cpp  Config.h  FilterDialog.cpp  FilterDialog.h  FilterTableModel.cpp  FilterTableModel.h  ForeachRange.h  GraphemeMap.cpp  GraphemeMap.h  LogFile.cpp  LogFile.h  LogTableModel.cpp  LogTableModel.h  MainWindow.cpp  MainWindow.h  MainWindowViewModel.cpp  MainWindowViewModel.h  SearchLine.cpp  SearchLine.h  ThreadDispatcher.cpp  ThreadDispatcher.h  main.cpp
gui/grid/: FilterHeaderView.cpp  FilterHeaderView.h  GotoLineDialog.cpp  HistMap.cpp  HistMap.h  LogScrollArea.cpp  LogScrollArea.h  LogTable.cpp  LogTable.h  LogTableView.cpp  LogTableView.h  LruCache.h
gui/resources/: resources.qrc
gui/resources/winicon/: icon.rc
gui/sm/: Logger.h  StateMachine.h
seer/: BoundedConcurrentQueue.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  FileParser.cpp  FileParser.h  FilterAlgo.cpp  FilterAlgo.h  Hist.cpp  Hist.h  ILineParser.h  ILineParserRepository.h  IRandomArray.h  Index.cpp  Index.h  IndexedEwah.cpp  IndexedEwah.h  IndexingTask.cpp  IndexingTask.h  InstanceTracker.cpp  InstanceTracker.h  LineParserRepository.cpp  LineParserRepository.h  Log.cpp  Log.h  OffsetIndex.cpp  OffsetIndex.h  ParallelFor.h  ParsingTask.cpp  ParsingTask.h  RandomBitArray.cpp  RandomBitArray.h  RegexLineParser.cpp  RegexLineParser.h  Searcher.cpp  Searcher.h  StriingLiterals.h  Task.cpp  Task.h
seer/lua/: LuaInterpreter.cpp  LuaInterpreter.h
seer/task/: IndexingTask.cpp  IndexingTask.h  ParsingTask.cpp  ParsingTask.h  SearchingTask.cpp  SearchingTask.h  Task.cpp  Task.h
src/: CMakeLists.txt  install.cmake.in  version.h.in
src/gui/: CMakeLists.txt  Config.cpp  Config.h  FilterDialog.cpp  FilterDialog.h  FilterTableModel.cpp  FilterTableModel.h  GraphemeMap.cpp  GraphemeMap.h  LogFile.cpp  LogFile.h  LogTableModel.cpp  MainWindow.cpp  MainWindow.h  SearchLine.cpp  SearchLine.h  main.cpp
src/gui/grid/: CachedHighlightSearcher.cpp  CachedHighlightSearcher.h  FilterHeaderView.cpp  FilterHeaderView.h  GotoLineDialog.cpp  GotoLineDialog.h  HistMap.h  LogTable.cpp  LogTable.h  LogTableView.cpp  LogTableView.h  LruCache.h  RowColumn.h
src/gui/resources/: 200_journalctl.json  500_logseer.json
src/gui/resources/winicon/: make_icon.sh
src/gui/sm/: Logger.h  StateMachine.h
src/seer/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  FileParser.cpp  FilterAlgo.cpp  Hist.cpp  ILineParser.h  IRandomArray.h  Index.cpp  Index.h  IndexedEwah.cpp  IndexedEwah.h  InstanceTracker.cpp  LineParserRepository.cpp  LineParserRepository.h  Log.cpp  Log.h  OffsetIndex.h  ParallelFor.h  RandomBitArray.cpp  RandomBitArray.h  RegexLineParser.cpp  RegexLineParser.h  SPMCQueue.h  Searcher.cpp  Searcher.h  StopWatch.h  Stopwatch.h  sockets.h
src/seer/lua/: LuaInterpreter.cpp
src/seer/task/: IndexingTask.h  SearchingTask.cpp  SearchingTask.h  Task.h
src/tests/: CMakeLists.txt  CommandLineParserTests.cpp  ConfigTests.cpp  FilterAlgoTests.cpp  FilterDialogModelTests.cpp  ForeachRangeTests.cpp  GraphemeMapTests.cpp  HistTests.cpp  InstanceTrackerTests.cpp  LogFileTests.cpp  LogTableModelTests.cpp  OffsetIndexTests.cpp  ParserTests.cpp  SearcherTests.cpp  TaskTests.cpp  TestLineParser.h
tests/: CMakeLists.txt  CommandLineParserTests.cpp  ConfigTests.cpp  FilterDialogModelTests.cpp  GraphemeMapTests.cpp  HistTests.cpp  IndexedEwahTests.cpp  InstanceTrackerTests.cpp  LineColorTests.cpp  LogFileTests.cpp  LogTableModelTests.cpp  OffsetIndexTests.cpp  ParserTests.cpp  RandomBitArrayTests.cpp  SearcherTests.cpp  TaskTests.cpp  TestLineParser.h
